fixed minor alignment issue

--- a/src/style/scss/components/_menu.scss
+++ b/src/style/scss/components/_menu.scss
@@ -19,7 +19,7 @@ strong {
     font-size:2em;
     position:fixed;
     top: 50px;
-    left:30%;
+    left:32.5%;
   }
 
 
